Updated paragraph and text box.  Added button under text box

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="https://louisvilleky.gov/government/jefferson-memorial-forest">
             <img class="header" src="https://louisvilleky.gov/sites/default/files/jefferson_memorial_forest/header_images/jmf-header_0.jpg" with="50%" alt="What The F*%#" title="What The F*%#" align="middle">
                  </a>
-    <p>This is a paragraph.</p>
+    <p>Jefferson Memorial Forest has trails for every skill level.  Use the form below to find your preferred trail.</p>
 
     <!-- <div class="container">
             <img src="notebook.jpg" alt="Notebook" style="width:100%;">
@@ -26,15 +26,16 @@
             </div>
           </div> -->
           
-    <label for="info">Tell us about yourself:</label><br>
-    <textarea id="info"></textarea>
+    <label for="info">Tell us about your trail experience.</label><br>
+    <textarea id="info"></textarea><br>
+    <button type="submit">Send</button><br>
 
     <form action="index.html" method="post">
       <h1>Trail Region Form</h1>
       <fieldset>
       <label for="trail">Trail Region:</label>
       <select id="trail" name="trail_region">
-        <optgroup label="trail_region">
+        <optgroup label="Trail Region">
             <option value="Paul Yost">Paul Yost</option>
             <option value="Scott's Gap">Scott's Gap</option>
             <option value="Welcome Center">Welcome Center</option>
