Added form to text box

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
               <p>Lorem ipsum..</p>
             </div>
           </div> -->
-          
+    
+<form>
     <label for="info">Tell us about your trail experience.</label><br>
     <textarea id="info"></textarea><br>
     <button type="submit">Send</button><br>
-
+</form>
     <form action="index.html" method="post">
       <h1>Trail Region Form</h1>
       <fieldset>
