Changed Trail Region to Forest Region in Form

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <form action="index.html" method="post">
       <h1>Trail Region Form</h1>
       <fieldset>
-      <label for="trail">Trail Region:</label>
+      <label for="trail">Forest Region:</label>
       <select id="trail" name="trail_region">
         <optgroup label="Trail Region">
             <option value="Paul Yost">Paul Yost</option>
