--- a/index.html
+++ b/index.html
@@ -4,66 +4,70 @@
     <meta charset="utf-8">
     <title>HTML Forms</title>
   </head>
-  <link rel="stylesheet" href="styles.css">
-  <a href="https://louisvilleky.gov/government/jefferson-memorial-forest"><h1>Jefferson Memorial Forest</h1></a>
   <body>
+    <div class="wrapper">
+    <!-- <header class="main-header"> -->
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="styles.css">
+        <a href="https://louisvilleky.gov/government/jefferson-memorial-forest"><h1>Jefferson Memorial Forest</h1></a>
+    <!-- </header> -->
         <div class="topnav">
                 <a class="active" href="#home">Home</a>
                 <a href="#news">News</a>
                 <a href="#contact">Contact</a>
                 <a href="#about">About</a>
-              </div>
-        <a href="https://louisvilleky.gov/government/jefferson-memorial-forest">
-            <img class="header" src="https://louisvilleky.gov/sites/default/files/jefferson_memorial_forest/header_images/jmf-header_0.jpg" with="50%" alt="Jefferson Memorial Forest" title="Jefferson Memorial Forest" align="middle">
-                 </a>
+        </div>
+            <a href="https://louisvilleky.gov/government/jefferson-memorial-forest">
+                <img class="header" src="https://louisvilleky.gov/sites/default/files/jefferson_memorial_forest/header_images/jmf-header_0.jpg" with="50%" alt="Jefferson Memorial Forest" title="Jefferson Memorial Forest" align="middle">
+            </a>
     <p>Jefferson Memorial Forest has trails for every skill level.  Use the form below to find your preferred trail.</p>
 
-    <!-- <div class="container">
-            <img src="notebook.jpg" alt="Notebook" style="width:100%;">
-            <div class="content">
-              <h1>Heading</h1>
-              <p>Lorem ipsum..</p>
-            </div>
-          </div> -->
+    <div class="container">
+            <img src="C:\Users\cgivan\Pictures\8RFCEGZx.jpeg" alt="Picture" style="width:40%;">
+            <!-- <div class="content"> -->
+              <!-- <h1>Heading</h1>
+              <p>I look good.</p> -->
+            <!-- </div> -->
+          </div>
     
-<form>
-    <label for="info">Tell us about your trail experience.</label><br>
-    <textarea id="info"></textarea><br>
-    <button type="submit">Send</button><br>
-</form>
-    <form action="index.html" method="post">
-      <h1>Trail Region Form</h1>
-      <fieldset>
-      <label for="trail">Forest Region:</label>
-      <select id="trail" name="trail_region">
-        <optgroup label="Trail Region">
-            <option value="Paul Yost">Paul Yost</option>
-            <option value="Scott's Gap">Scott's Gap</option>
-            <option value="Welcome Center">Welcome Center</option>
-            <option value="Horine Reservation">Horine Reservation</option>
-        </optgroup>
-    </select><br>
-    </fieldset>
-    <fieldset>
-    <label>Trail Difficulty:</label><br>
-        <input type="radio" id="easy" value="easy" name="trail_region">
-            <label for="easy">Easy</label><br>
-        <input type="radio" id="moderate" value="moderate" name="trail_region">
-            <label for="moderate">Moderate</label><br>
-        <input type="radio" id="difficult" value="difficult" name="trail_region">
-            <label for="difficult">Difficult</label><br>
+        <form>
+            <label for="info">Tell us about your trail experience.</label><br>
+            <textarea id="info"></textarea><br>
+            <button type="submit">Send</button><br>
+        </form>
+        <form action="index.html" method="post">
+        <h1>Trail Region Form</h1>
+        <fieldset>
+            <label for="trail">Forest Region:</label>
+            <select id="trail" name="trail_region">
+                <optgroup label="Trail Region">
+                    <option value="Paul Yost">Paul Yost</option>
+                    <option value="Scott's Gap">Scott's Gap</option>
+                    <option value="Welcome Center">Welcome Center</option>
+                    <option value="Horine Reservation">Horine Reservation</option>
+                </optgroup>
+            </select><br>
+        </fieldset>
+        <fieldset>
+            <label>Trail Difficulty:</label><br>
+            <input type="radio" id="easy" value="easy" name="trail_region">
+                <label for="easy">Easy</label><br>
+            <input type="radio" id="moderate" value="moderate" name="trail_region">
+                <label for="moderate">Moderate</label><br>
+            <input type="radio" id="difficult" value="difficult" name="trail_region">
+                <label for="difficult">Difficult</label><br>
             <input type="radio" id="strenuous" value="strenuous" name="trail_region">
                 <label for="strenuous">Strenuous</label><br>
         </fieldset>
 
         <fieldset>
-        <input type="checkbox" id="trails" value="trail_list">
-            <label for="trails">List all Trails in Region</label><br>
-        <input type="checkbox" id="newsletter" value="trail_difficulty">
-            <label for="newsletter">List all Trails in selected difficulty</label><br>
+            <input type="checkbox" id="trails" value="trail_list">
+                <label for="trails">List all Trails in Region</label><br>
+            <input type="checkbox" id="newsletter" value="trail_difficulty">
+                <label for="newsletter">List all Trails in selected difficulty</label><br>
         </fieldset>
-        <button type="submit">Go</button><br>
-    </form>
-
+            <button type="submit">Go</button><br>
+        </form>
+        </div>
   </body>
 </html>
