--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>HTML Forms</title>
   </head>
   <body>
+      <div class="wrap">
     <div class="wrapper">
     <!-- <header class="main-header"> -->
         <link rel="stylesheet" href="normalize.css">
@@ -69,5 +70,9 @@
             <button type="submit">Go</button><br>
         </form>
         </div>
+        </div>
+        <footer class=main-footer>
+            <span>&copy;2018 Best Trails in Louisvile.</span>
+        </footer>
   </body>
 </html>
