--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
             <input type="checkbox" id="newsletter" value="trail_difficulty">
                 <label for="newsletter">List all Trails in selected difficulty</label><br>
         </fieldset>
+        <div class="wrap">
             <button type="submit">Go</button><br>
+        </div>
         </form>
         </div>
         </div>
-        <footer class=main-footer>
-            <span>&copy;2018 Best Trails in Louisvile.</span>
+        <footer class="main-footer">
+            <span>&copy;2018 Trails in Jefferson Memorial Forest.</span>
         </footer>
   </body>
 </html>
