--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>Jefferson Memorial Forest has trails for every skill level.  Use the form below to find your preferred trail.</p>
 
     <div class="container">
-            <img src="C:\Users\cgivan\Pictures\8RFCEGZx.jpeg" alt="Picture" style="width:40%;">
+            <img src="https://pbs.twimg.com/profile_images/563576709597765632/8RFCEGZx_400x400.jpeg" alt="Picture" title="This Guy!" style="width:40%;">
             <!-- <div class="content"> -->
               <!-- <h1>Heading</h1>
               <p>I look good.</p> -->
