added side by side columns

--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
             <a href="https://louisvilleky.gov/government/jefferson-memorial-forest">
                 <img class="header" src="https://louisvilleky.gov/sites/default/files/jefferson_memorial_forest/header_images/jmf-header_0.jpg" with="50%" alt="Jefferson Memorial Forest" title="Jefferson Memorial Forest" align="middle">
             </a>
-    <p>Jefferson Memorial Forest has trails for every skill level.  Use the form below to find your preferred trail.</p>
-
+    <div class="primary col">
+        <h2>Welcome!</h2>
+        <p>Jefferson Memorial Forest has trails for every skill level.  Use the form below to find your preferred trail.</p>
+    </div>
+    <div class="secondary col">
+        <h2>Other Stuff!</h2>
+        <p>There are plenty of activities besides hiking at JMF.  We have picnic areas and zip lines!  Find your happy place here.</p>
+    </div>
     <div class="container">
             <img src="https://pbs.twimg.com/profile_images/563576709597765632/8RFCEGZx_400x400.jpeg" alt="Picture" title="This Guy!" style="width:40%;">
             <!-- <div class="content"> -->
