--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>JMF Trail Finder</title>
     </head>
     <body onload="appear(document.getElementsByTagName('img')[0], 0, 5, 200); appear(document.getElementsByTagName('h1')[0], 0, 5, 200);">
